--- a/popup.css
+++ b/popup.css
@@ -52,6 +52,9 @@ table.pretty caption {
   position:relative;
   top: -5px;
 }
+#idleButton.toggled {
+  color: green;
+}
 
 #corralHolder {
   display:none;
